test/tests/stages/9_functions/invalid_types/extra_credit/prefix_decr_fun_name.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[19]:
  int
  identifier(x)
  (
  void
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  --
  identifier(x)
  ;
  return
  const int(0)
  ;
  }
